
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.39.1]]
== 0.39.1 (14.08.2019)

icon:check[] A regression in `v0.39.0` broke the `/demo` endpoint. This has been fixed now and the demo application is accessible again.

[[v0.39.0]]
== 0.39.0 (13.08.2019)

icon:plus[] Core: The core has been reworked to add future support for multitenancy in Gentics Mesh.

[[v0.38.1]]
== 0.38.1 (12.08.2019)

icon:check[] Plugins: A bug in the plugin startup process has been fixed. Previously plugins were not initialized prior to registration.

icon:check[] GraphQL: The `pluginApi` field will no longer be added to the schema if no GraphQL plugins have been deployed to avoid schema validation errors. link:https://github.com/gentics/mesh/issues/842[#842]

icon:plus[] Changelog: The `ReleaseBranchRenameChange` entry has been updated to reduce required memory and increase execution performance on large databases (2m+ nodes).

icon:plus[] REST: A `X-Powered-By` header was added to all http responses.

[[v0.38.0]]
== 0.38.0 (09.08.2019)

CAUTION: Removal of mapper script support

[quote]
____

The mapper script support has been dropped due to the deprecation of the Nashorn JavaScript engine. The functionality of mapper scripts can be replaced by usage of the new link:{{< relref "plugin-types/auth-service-plugin.asciidoc" >}}[Authentication Service Plugin API].

The `auth.mapperScriptDevMode` and `auth.mapperScriptPath` configuration options are no longer needed and have been removed.
____

icon:check[]: Plugins: The query type of plugins will now automatically be prefixed with the plugin apiName to ensure that no type conflicts can occur.

[[v0.37.1]]
== 0.37.1 (06.08.2019)

icon:plus[] Core: The core Dagger library was updated from version `2.11` to `2.24`.
